# scDifformer

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
celltype_anotation/: DDP_zheng68k.ipynb  diffusion.py  geneformer_predict.ipynb  lung1_finetune_attention.py  preprocess.ipynb
cross_species/: README  scdifformer.yml
cross_species/human/: human_all_in_one.py
cross_species/mus/: mus_all_in_one.py  mus_rank_value_encoding.py
data/: gene_median_dictionary.pkl  name_id.pkl  token_dictionary.pkl
data/output/20250806_0949_duUWNQUz/example.dataset/: dataset_info.json  state.json
fine_tune/: fine_tune_celltype_annotation.py
inference/: inference_celltype_annotation.py
libs/: __init__.py  collator_for_classification.py  constants.py  pretrainer.py  tokenizer.py
perturber/aging/: top20genes_choose3.py
perturber/experiment/: dixit.ipynb  pbmc.ipynb  preprocess.ipynb
preprocess/: generate_rank_value_encoding.py  preprocess.py
scbert/: finetune.py
stdgcn/: WB_GraphSAGE.py  embed_diffusion.ipynb
stdgcn/STdGCN/: GCN.py  STdGCN.py  __init__.py  adjacency_matrix.py  benchmark.py  utils.py
